fix(0.2.8): 安全更新 样式更新 性能优化 * 增强云函数防 XSS 注入 * 优化在深色模式下的显示效果 * 修复开启 Akismet 反垃圾时，发表评论速度慢 * 修复头像点击无法正确跳转网址 * 完善文档

--- a/src/function/twikoo/package.json
+++ b/src/function/twikoo/package.json
@@ -8,6 +8,8 @@
     "blueimp-md5": "^2.18.0",
     "bowser": "^2.11.0",
     "cheerio": "^1.0.0-rc.3",
+    "dompurify": "^2.2.2",
+    "jsdom": "^16.4.0",
     "nodemailer": "^6.4.16",
     "querystring": "^0.2.0"
   }
